--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   http: ^1.3.0
   shared_preferences: ^2.5.3
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -34,9 +35,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
